# follow-me

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/template/: FOLLOW_MEConfig.cmake.in  FOLLOW_MEConfigUninstall.cmake.in
doc/: follow-me-install.md  groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
programs/: CMakeLists.txt
programs/armSwing/: ArmSwing.cpp  ArmSwing.hpp  CMakeLists.txt  main.cpp
programs/exampleProgram/: CMakeLists.txt
programs/fmArmSwing/: CMakeLists.txt  FmArmSwing.cpp  FmArmSwing.hpp  main.cpp
programs/fmDialogueManager/: CMakeLists.txt  FmDialogueManager.cpp  FmDialogueManager.hpp  StateMachine.hpp  main.cpp
programs/fmExecutionCore/: CMakeLists.txt  FmExecutionCore.cpp  FmExecutionCore.hpp  InCvPort.hpp  InSrPort.hpp  main.cpp
programs/followMeArmExecution/: CMakeLists.txt  FollowMeArmExecution.cpp  FollowMeArmExecution.hpp  main.cpp
programs/followMeArmSwing/: FollowMeArmSwing.cpp  FollowMeArmSwing.hpp  main.cpp
programs/followMeDialogueManager/: CMakeLists.txt  FmDialogueManager.cpp  FmDialogueManager.hpp  FollowMeDialogueManager.cpp  FollowMeDialogueManager.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
programs/followMeExecutionCore/: FmExecutionCore.cpp  FmExecutionCore.hpp  FollowMeExecutionCore.cpp  FollowMeExecutionCore.hpp  InCvPort.cpp  InCvPort.hpp  InSrPort.cpp  InSrPort.hpp  (+3 more)
share/: CMakeLists.txt
share/app/follow-me/: doc.dox
share/app/follow-me/scripts/: follow-me.xml  follow-me_english.xml  follow-me_spanish.xml
share/app/followMe/: doc.dox
(+14 files in other folders)
